# spec-decoding

./: .gitignore  Cargo.toml
.ralph/: speculative-dflash-rust.md
src/: adapter_loaded.rs  adapter_runtime_backend.rs  adapter_runtime_plan.rs  adapter_runtime_target.rs  adapter_runtime_weight_check.rs  adapter_weight_preflight.rs  adapters.rs  asset_files.rs  block_draft.rs  config.rs  decode.rs  drafters.rs  gguf_parse.rs  gguf_runtime_logits.rs  gguf_runtime_smoke.rs  lib.rs  loading.rs  model.rs  runtime.rs  spec_decode.rs  weight_metadata.rs
