[package]
name = "speclative-diffusion"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "speclative_diffusion"
path = "src/lib.rs"

[features]
default = []
candle = []
gguf = []
tokenizers = ["dep:tokenizers"]

[dependencies]
serde_json = "1.0.150"
tokenizers = { version = "0.23.1", default-features = false, optional = true }
