[package]
name = "speclative-diffusion"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "speclative_diffusion"
path = "src/lib.rs"

[features]
default = []
candle = []
gguf = []
gguf-llama-cpp = ["gguf"]
tokenizers = ["dep:tokenizers"]
safetensors = ["dep:safetensors"]

[dependencies]
safetensors = { version = "0.7.0", optional = true }
serde_json = "1.0.150"
tokenizers = { version = "0.23.1", default-features = false, optional = true, features = ["fancy-regex"] }
